# studyCppProject2025

./: CMakeLists.txt  main  main.cpp
Day01_初识输入输出/: 01_IO  01_IO.cpp  02_character.cpp  02_character.h  03_const  03_const.cpp  04_scanf&printf  04_scanf&printf.cpp  05_getchar.cpp
Day02_数据类型/: 01_basic_types.cpp  02_compound_types.cpp  02_compound_types_01_reference_type.cpp  02_compound_types_02_pointer_type.cpp  02_compound_types_03_array_type.cpp  02_compound_types_04_funtion_type.cpp  03_derived_types_01_class&struct .cpp  03_derived_types_02_enum&enum_class.cpp  03_derived_types_03_union .cpp
Day03_表达式/: 01_operator.cpp  02_if_statement.cpp  03_switch_statement.cpp  04_while_statement.cpp  05_for_statement.cpp  06_range_for_statement.cpp  07_break&continue&goto.cpp  08_try block & throw expression.cpp
Day04_函数/: 01_function.cpp  02_function & pointer  02_function & pointer.cpp
Day05_类（面向对象）/: 00_shallow_copy & deep_copy_01.cpp  00_shallow_copy & deep_copy_02  00_shallow_copy & deep_copy_02.cpp  01_encapsulation  01_encapsulation.cpp  02_extend.cpp  03_polymorphic.cpp
